--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 /* Fixed Header */
 .fixed {
     position: fixed;
-    font-size: 1.5em;
+    font-size: 1.2em;
     top: 0;
     left: 0;
     width: 100%;
@@ -288,7 +288,8 @@ footer {
     
     <nav  class="fixed" style="background-color: #f9f9f9; color: black; padding: 15px;">
         <a href="blog.html" target="_blank" class="w3-bar-item w3-button">Blog</a> |
-        <a href="contact.html" target="_blank" class="w3-bar-item w3-button">Contact</a>
+        <a href="contact.html" target="_blank" class="w3-bar-item w3-button">Contact</a> |
+	<a href="contribute.html" target="_blank" class="w3-bar-item w3-button">Contribute</a>    
     </nav>
 
     <!-- Header Section -->
