--- a/blog.html
+++ b/blog.html
@@ -113,7 +113,8 @@
     <footer>
         <div class="container">
             <p><a href="index.html">Home</a> |
-	    <a href="contact.html">Contact</a></p>
+	    <a href="contact.html">Contact</a> |
+	    <a href="contribute.html">Contribute</a></p>
             <p style="font-size: 0.8rem;">&copy; 2024 Bug Bounty Hub. All rights reserved.</p>
         </div>
     </footer>
