--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,8 @@
     <footer>
         <div class="container">
             <p><a href="index.html">Home</a> |
-	    <a href="blog.html">Blog</a></p>
+	    <a href="blog.html">Blog</a> |
+	    <a href="contribute.html">Contribute</a></p>
             <p style="font-size: 0.8rem;">&copy; 2024 Bug Bounty Hub. All rights reserved.</p>
         </div>
     </footer>
