--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <script async src="https://tally.so/widgets/embed.js"></script>
     <meta charset="UTF-8">
     <meta name="google-adsense-account" content="ca-pub-2653231993076581">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2653231993076581"
+     crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
