--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,6 @@
 <head>
     <script async src="https://tally.so/widgets/embed.js"></script>
     <meta charset="UTF-8">
-    <meta name="google-adsense-account" content="ca-pub-2653231993076581">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2653231993076581"
-     crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -135,6 +132,6 @@
             document.getElementById('contactForm').style.display = 'block'; // Show iframe
         }
     </script>
-
+<script type="text/javascript"> var infolinks_pid = 3426682; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
