--- a/contact.html
+++ b/contact.html
@@ -132,6 +132,10 @@
             document.getElementById('contactForm').style.display = 'block'; // Show iframe
         }
     </script>
-<script type="text/javascript"> var infolinks_pid = 3426682; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+<script type="text/javascript">
+var infolinks_pid = 3426682;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
