--- a/contribute.html
+++ b/contribute.html
@@ -141,6 +141,10 @@
             <p style="font-size: 0.8rem;">&copy; 2024 Bug Bounty Hub. All rights reserved.</p>
         </div>
     </footer>
-<script type="text/javascript"> var infolinks_pid = 3426682; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+<script type="text/javascript">
+var infolinks_pid = 3426682;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
